--- a/index.html
+++ b/index.html
@@ -3,14 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style\index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
     <title>Hussain Ali Portfolio</title>
 </head>
 <body>
     <header>
+        <h1>Hello, I'm Hussain Ali.*</h1>
         <nav>
-            <a></a>
+            <a>Home</a>
+            <a>About</a>
+            <a>Contact</a>
+            <a>Projects</a>
         </nav>
+        <section class='header-text'>
+            <h2>A Full Stack Software Engineer</h2>
+            <p>In a nutshell, that means I sit at my desk all day and solve problems. Feel free to take a look at some of my work.</p>
+        </section>
     </header>
-    
+    <div class='section-1'>
+        <div class='img-1-container'>
+            <img src='#' />
+        </div>
+    </div>
+    <div class='section-2'>
+        <div class='project1'>
+            <img src='#'/><p>Project 1</p>
+        </div>
+        <div class='project2'>
+            <img src='#'/><p>Project 2</p>
+        </div>
+        <div class='project3'>
+            <img src='#'/><p>Project 3</p>
+        </div>
+        <div class='project4'>
+            <img src='#'/><p>Project 4</p>
+        </div>
+        <div class='txt-container'>
+            <p>Text that describes the projects to the left.</p>
+        </div>
+    </div>
+    <footer>
+        <a class='button' id='contact-me-button'>Contact Me</a>
+        <div class='social-media'>
+            <a href='www.instagram.com'>
+                <i class="fa fa-instagram fa-2x"></i>
+            </a>
+            <a href="www.github.com">
+                <i class="fa fa-github-alt fa-2x"></i>
+            </a>
+            <a href="www.twitter.com">
+                <i class="fab fa-twitter-square"></i>
+            </a>
+            <a href='www.linkedin.com'>
+                <i class="fab fa-linkedin-in"></i>
+            </a>
+        </div>
+    </footer>
 </body>
 </html>
