updated html and css

--- a/index.html
+++ b/index.html
@@ -6,57 +6,68 @@
     <link rel="stylesheet" href="style\index.css">
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/ab01a129f8.js" crossorigin="anonymous"></script>
     <title>Hussain Ali Portfolio</title>
 </head>
 <body>
     <header>
-        <h1>Hello, I'm Hussain Ali.*</h1>
+        <h1>HUSSAIN ALI.*</h1>
         <nav>
-            <a>Home</a>
-            <a>About</a>
-            <a>Contact</a>
-            <a>Projects</a>
+            <div class='nav-container'>
+                <a>Home</a>
+            </div>
+            <div class='nav-container'>
+                <a>About</a>
+            </div>
+            <div class='nav-container'>
+                <a>Contact</a>
+            </div>
+            <div class='nav-container'>
+                <a>Projects</a>
+            </div>
         </nav>
         <section class='header-text'>
-            <h2>A Full Stack Software Engineer</h2>
+            <h2>Full Stack Software Engineer</h2>
             <p>In a nutshell, that means I sit at my desk all day and solve problems. Feel free to take a look at some of my work.</p>
         </section>
     </header>
     <div class='section-1'>
         <div class='img-1-container'>
-            <img src='#' />
+            <img src='style\section1 image.png' />
         </div>
     </div>
     <div class='section-2'>
-        <div class='project1'>
-            <img src='#'/><p>Project 1</p>
+        <div class='project'>
+            <img src='https://picsum.photos/200/400'/>
         </div>
-        <div class='project2'>
-            <img src='#'/><p>Project 2</p>
+        <div class='project'>
+            <img src='https://picsum.photos/200/400'/>
         </div>
-        <div class='project3'>
-            <img src='#'/><p>Project 3</p>
+        <div class='project'>
+            <img src='https://picsum.photos/200/400'/>
         </div>
-        <div class='project4'>
-            <img src='#'/><p>Project 4</p>
+        <div class='project'>
+            <img src='https://picsum.photos/200/400'/>
         </div>
         <div class='txt-container'>
             <p>Text that describes the projects to the left.</p>
         </div>
     </div>
     <footer>
-        <a class='button' id='contact-me-button'>Contact Me</a>
-        <div class='social-media'>
-            <a href='www.instagram.com'>
+        <div class="contact">
+            <a class='button' id='contact-me-button'>Contact Me</a>
+        </div>
+        <div class='icons'>
+            <a target="_blank" href="https://www.instagram.com/?hl=en">
                 <i class="fa fa-instagram fa-2x"></i>
             </a>
-            <a href="www.github.com">
+            <a target="_blank" href="https://github.com/princeali415">
                 <i class="fa fa-github-alt fa-2x"></i>
             </a>
-            <a href="www.twitter.com">
+            <a target="_blank" href="https://github.com/princeali415">
                 <i class="fab fa-twitter-square"></i>
             </a>
-            <a href='www.linkedin.com'>
+            <a target="_blank" href="https://github.com/princeali415">
                 <i class="fab fa-linkedin-in"></i>
             </a>
         </div>
