updated html and css

--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
     </div>
     <footer>
         <div class="contact">
-            <a class='button' id='contact-me-button'>Contact Me</a>
+            <div class='button-container'>
+                <a id='contact-me-button' href="mailto:ali.415code@gmail.com">Contact Me</a>
+            </div>
         </div>
         <div class='icons'>
             <a target="_blank" href="https://www.instagram.com/?hl=en">
@@ -64,10 +66,10 @@
             <a target="_blank" href="https://github.com/princeali415">
                 <i class="fa fa-github-alt fa-2x"></i>
             </a>
-            <a target="_blank" href="https://github.com/princeali415">
+            <a target="_blank" href="https://twitter.com/prince_ali858">
                 <i class="fab fa-twitter-square"></i>
             </a>
-            <a target="_blank" href="https://github.com/princeali415">
+            <a target="_blank" href="https://www.linkedin.com/in/hussain-ali-58a9b690/">
                 <i class="fab fa-linkedin-in"></i>
             </a>
         </div>
