--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
         <h1>HUSSAIN ALI.*</h1>
         <nav>
             <div class='nav-container'>
-                <a>Home</a>
+                <a href="C:\Users\Hussain\Desktop\Web38\User-Interface-II\index.html">Home</a>
             </div>
             <div class='nav-container'>
-                <a>About</a>
+                <a href="C:\Users\Hussain\Desktop\Web38\User-Interface-II\about.html">About</a>
             </div>
             <div class='nav-container'>
-                <a>Contact</a>
+                <a href="C:\Users\Hussain\Desktop\Web38\User-Interface-II\contact.html">Contact</a>
             </div>
             <div class='nav-container'>
-                <a>Projects</a>
+                <a href="C:\Users\Hussain\Desktop\Web38\User-Interface-II\projects.html">Projects</a>
             </div>
         </nav>
         <section class='header-text'>
