--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
             <p>In a nutshell, that means I sit at my desk all day and solve problems. Feel free to take a look at some of my work.</p>
         </section>
     </header>
-    <div class='section-1'>
+    <div class="section-1">
         <div class='img-1-container'>
-            <img src='style\section1 image.png' />
+
         </div>
     </div>
+
     <div class='section-2'>
         <div class='project'>
             <img src='https://picsum.photos/200/400'/>
