finished media query for 800px

--- a/index.html
+++ b/index.html
@@ -38,20 +38,23 @@
     </div>
 
     <div class='section-2'>
-        <div class='project'>
-            <img src='https://picsum.photos/200/400'/>
-        </div>
-        <div class='project'>
-            <img src='https://picsum.photos/200/400'/>
-        </div>
-        <div class='project'>
-            <img src='https://picsum.photos/200/400'/>
-        </div>
-        <div class='project'>
-            <img src='https://picsum.photos/200/400'/>
-        </div>
-        <div class='txt-container'>
-            <p>Text that describes the projects to the left.</p>
+        
+            <div class='project'>
+                <img src='https://picsum.photos/200/400'/>
+            </div>
+            <div class='project'>
+                <img src='https://picsum.photos/200/400'/>
+            </div>
+            <div class='project'>
+                <img src='https://picsum.photos/200/400'/>
+            </div>
+            <div class='project'>
+                <img src='https://picsum.photos/200/400'/>
+            </div>
+        <div id="section-2-text-container">
+            <div class='txt-container'>
+                <p>Text that describes the projects to the left.</p>
+            </div>
         </div>
     </div>
     <footer>
